fix wordwrapping bug and added notification elements

--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -24,10 +24,13 @@ main
   z-index: 980
   position: relative
   top: 5.5em
+  width: 100%
+  word-break: break-all
+
 // header classes margin fix
 @for $i from 1 through 12
      h#{$i}
-       margin: 10px
+       margin: 0
 // Dev Classes
 .dev
   border: 1px solid black
@@ -65,10 +68,57 @@ main
   border: 1px solid $success_dark
   padding: 1rem
   color: white
+.notification-primary
+  width: 100%;
+  display: flex
+.notification-primary h2
+  border-right: 0.3rem solid $primary
+  border-radius: 2px
+  padding: 5px
+  margin-right: 5px;
+  min-width: 70px
+  height: auto
+  display: flex
+.notification-danger
+  width: 100%;
+  display: flex
+.notification-danger h2
+  border-right: 0.3rem solid $danger
+  border-radius: 2px
+  padding: 5px
+  margin-right: 5px;
+  min-width: 70px
+  height: auto
+  display: flex
+.notification-warning
+  width: 100%;
+  display: flex
+.notification-warning h2
+  border-right: 0.3rem solid $warning
+  border-radius: 2px
+  padding: 5px
+  margin-right: 5px;
+  min-width: 70px
+  height: auto
+  display: flex
+.notification-success
+  width: 100%;
+  display: flex
+.notification-success h2
+  border-right: 0.3rem solid $success
+  border-radius: 2px
+  padding: 5px
+  margin-right: 5px;
+  min-width: 70px
+  height: auto
+  display: flex
+.notification-body
+  line-height: 30pt
+  font-size: 15pt
+  word-wrap: break-word
 // Grid
 div[class^="col-"]
   padding: 1rem 0
-  text-align: center
 .row
   display: flex
   flex-wrap: wrap
